syntax = "proto3";

package computationServices;
option java_multiple_files = true;
option objc_class_prefix = "part3";
option java_outer_classname = "part3";

service sort {
  rpc AsyncSort(stream AsyncSortIp) returns (stream AsyncSortOp){}
}

service add {
  rpc AsyncAdd(stream AsyncSumIp) returns (stream AsyncSumOp){}
}

message AsyncSumIp {
  int32 a = 1;
  int32 b = 5;
  string sumReqId = 6;
  string msg = 7;
}

message AsyncSortIp {
  repeated int32 arr = 1;
  string sortReqId = 6;
  string msg = 7;
}

message AsyncSumOp {
  int32 sum = 1;
  string msg = 7;
  string sumReqId = 6;
}

message AsyncSortOp {
  repeated int32 arr = 1;
  string sortReqId = 6;
  string msg = 7;
}

